test/types/type_variables/ferguson/tuple-of-array-type-default-init.good
tuple-of-array-type-default-init.chpl:2: error: default initialization of tuple containing array or domain type not yet implemented
